@@ -21,7 +21,7 @@ public class ServiceUtil {
                     .formatted(clazz.getName(), names);
             throw new IllegalStateException(msg);
         } else {
-            var provider = providers.get(0);
+            var provider = providers.getFirst();
             TerraCompositioAPI.LOGGER.debug("Instantiating {} for service {}", provider.type().getName(), clazz.getName());
             return provider.get();
         }
